parser/parser.output
Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: TOKEN_LET TOKEN_IDENTIFIER TOKEN_EQ expression TOKEN_IN expression
    3           | TOKEN_FUN TOKEN_IDENTIFIER TOKEN_WITH id_list TOKEN_EQ expression TOKEN_IN expression
    4           | TOKEN_LAMBDA id_list TOKEN_DOT expression
    5           | TOKEN_IF expression TOKEN_THEN expression TOKEN_ELSE expression
    6           | expression TOKEN_PLUS expression
    7           | expression TOKEN_AND expression
    8           | expression TOKEN_OR expression
    9           | expression TOKEN_MINUS expression
   10           | expression TOKEN_TIMES expression
   11           | expression TOKEN_DIVIDE expression
   12           | expression TOKEN_EQ expression
   13           | expression TOKEN_NEQ expression
   14           | expression TOKEN_LT expression
   15           | expression TOKEN_LEQ expression
   16           | expression TOKEN_GT expression
   17           | expression TOKEN_GEQ expression
   18           | TOKEN_INT
   19           | TOKEN_STRING
   20           | TOKEN_LPAREN expression_application TOKEN_RPAREN
   21           | TOKEN_LPAREN expression TOKEN_RPAREN
   22           | TOKEN_PRINT expression
   23           | TOKEN_READINT
   24           | TOKEN_READSTRING
   25           | expression TOKEN_CONS expression
   26           | TOKEN_HD expression
   27           | TOKEN_TL expression
   28           | TOKEN_NIL
   29           | TOKEN_ISNIL expression
   30           | TOKEN_IDENTIFIER
   31           | TOKEN_ERROR

   32 id_list: TOKEN_IDENTIFIER
   33        | TOKEN_IDENTIFIER TOKEN_COMMA id_list

   34 expression_application: expression expression
   35                       | expression_application expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_READSTRING (258) 24
TOKEN_READINT (259) 23
TOKEN_PRINT (260) 22
TOKEN_ISNIL (261) 29
TOKEN_HD (262) 26
TOKEN_TL (263) 27
TOKEN_CONS (264) 25
TOKEN_NIL (265) 28
TOKEN_DOT (266) 4
TOKEN_WITH (267) 3
TOKEN_LET (268) 2
TOKEN_PLUS (269) 6
TOKEN_MINUS (270) 9
TOKEN_IDENTIFIER (271) 2 3 30 32 33
TOKEN_TIMES (272) 10
TOKEN_DIVIDE (273) 11
TOKEN_INT (274) 18
TOKEN_LPAREN (275) 20 21
TOKEN_RPAREN (276) 20 21
TOKEN_AND (277) 7
TOKEN_OR (278) 8
TOKEN_EQ (279) 2 3 12
TOKEN_NEQ (280) 13
TOKEN_GT (281) 16
TOKEN_GEQ (282) 17
TOKEN_LT (283) 14
TOKEN_LEQ (284) 15
TOKEN_IF (285) 5
TOKEN_THEN (286) 5
TOKEN_ELSE (287) 5
TOKEN_LAMBDA (288) 4
TOKEN_FUN (289) 3
TOKEN_COMMA (290) 33
TOKEN_STRING (291) 19
TOKEN_ERROR (292) 31
TOKEN_IN (293) 2 3
EXPR (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
expression (42)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31, on right: 1 2 3 4 5 6 7 8 9 10 11 12
    13 14 15 16 17 21 22 25 26 27 29 34 35
id_list (43)
    on left: 32 33, on right: 3 4 33
expression_application (44)
    on left: 34 35, on right: 20 35


State 0

    0 $accept: . program $end

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    program     go to state 17
    expression  go to state 18


State 1

   24 expression: TOKEN_READSTRING .

    $default  reduce using rule 24 (expression)


State 2

   23 expression: TOKEN_READINT .

    $default  reduce using rule 23 (expression)


State 3

   22 expression: TOKEN_PRINT . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 19


State 4

   29 expression: TOKEN_ISNIL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 20


State 5

   26 expression: TOKEN_HD . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 21


State 6

   27 expression: TOKEN_TL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 22


State 7

   28 expression: TOKEN_NIL .

    $default  reduce using rule 28 (expression)


State 8

    2 expression: TOKEN_LET . TOKEN_IDENTIFIER TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 23


State 9

   30 expression: TOKEN_IDENTIFIER .

    $default  reduce using rule 30 (expression)


State 10

   18 expression: TOKEN_INT .

    $default  reduce using rule 18 (expression)


State 11

   20 expression: TOKEN_LPAREN . expression_application TOKEN_RPAREN
   21           | TOKEN_LPAREN . expression TOKEN_RPAREN

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression              go to state 24
    expression_application  go to state 25


State 12

    5 expression: TOKEN_IF . expression TOKEN_THEN expression TOKEN_ELSE expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 26


State 13

    4 expression: TOKEN_LAMBDA . id_list TOKEN_DOT expression

    TOKEN_IDENTIFIER  shift, and go to state 27

    id_list  go to state 28


State 14

    3 expression: TOKEN_FUN . TOKEN_IDENTIFIER TOKEN_WITH id_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 29


State 15

   19 expression: TOKEN_STRING .

    $default  reduce using rule 19 (expression)


State 16

   31 expression: TOKEN_ERROR .

    $default  reduce using rule 31 (expression)


State 17

    0 $accept: program . $end

    $end  shift, and go to state 30


State 18

    1 program: expression .
    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43

    $default  reduce using rule 1 (program)


State 19

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   22           | TOKEN_PRINT expression .
   25           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43

    $default  reduce using rule 22 (expression)


State 20

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | expression . TOKEN_CONS expression
   29           | TOKEN_ISNIL expression .

    TOKEN_CONS  shift, and go to state 31

    $default  reduce using rule 29 (expression)


State 21

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | expression . TOKEN_CONS expression
   26           | TOKEN_HD expression .

    $default  reduce using rule 26 (expression)


State 22

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | expression . TOKEN_CONS expression
   27           | TOKEN_TL expression .

    $default  reduce using rule 27 (expression)


State 23

    2 expression: TOKEN_LET TOKEN_IDENTIFIER . TOKEN_EQ expression TOKEN_IN expression

    TOKEN_EQ  shift, and go to state 44


State 24

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   21           | TOKEN_LPAREN expression . TOKEN_RPAREN
   25           | expression . TOKEN_CONS expression
   34 expression_application: expression . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_CONS        shift, and go to state 31
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_PLUS        shift, and go to state 32
    TOKEN_MINUS       shift, and go to state 33
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_TIMES       shift, and go to state 34
    TOKEN_DIVIDE      shift, and go to state 35
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 45
    TOKEN_AND         shift, and go to state 36
    TOKEN_OR          shift, and go to state 37
    TOKEN_EQ          shift, and go to state 38
    TOKEN_NEQ         shift, and go to state 39
    TOKEN_GT          shift, and go to state 40
    TOKEN_GEQ         shift, and go to state 41
    TOKEN_LT          shift, and go to state 42
    TOKEN_LEQ         shift, and go to state 43
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 46


State 25

   20 expression: TOKEN_LPAREN expression_application . TOKEN_RPAREN
   35 expression_application: expression_application . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 47
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 48


State 26

    5 expression: TOKEN_IF expression . TOKEN_THEN expression TOKEN_ELSE expression
    6           | expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43
    TOKEN_THEN    shift, and go to state 49


State 27

   32 id_list: TOKEN_IDENTIFIER .
   33        | TOKEN_IDENTIFIER . TOKEN_COMMA id_list

    TOKEN_COMMA  shift, and go to state 50

    $default  reduce using rule 32 (id_list)


State 28

    4 expression: TOKEN_LAMBDA id_list . TOKEN_DOT expression

    TOKEN_DOT  shift, and go to state 51


State 29

    3 expression: TOKEN_FUN TOKEN_IDENTIFIER . TOKEN_WITH id_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_WITH  shift, and go to state 52


State 30

    0 $accept: program $end .

    $default  accept


State 31

   25 expression: expression TOKEN_CONS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 53


State 32

    6 expression: expression TOKEN_PLUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 54


State 33

    9 expression: expression TOKEN_MINUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 55


State 34

   10 expression: expression TOKEN_TIMES . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 56


State 35

   11 expression: expression TOKEN_DIVIDE . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 57


State 36

    7 expression: expression TOKEN_AND . expression
